// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toast > Toast.vue > should renders OXD Toast 1`] = `
"<div data-v-d95c87f0="" class="oxd-toast oxd-toast--default" aria-live="assertive">
  <div data-v-d95c87f0="" class="oxd-toast-start">
    <div data-v-e0c4fc83="" data-v-d95c87f0="" class="oxd-toast-icon-container">
      <div data-v-e0c4fc83="" class="oxd-toast-icon-wrap oxd-toast-icon-wrap--default"><i data-v-85cde8ca="" data-v-e0c4fc83="" class="oxd-icon bi-star oxd-toast-icon"></i></div>
    </div>
    <div data-v-d95c87f0="" class="oxd-toast-content oxd-toast-content--default">
      <p data-v-0334bd57="" data-v-d95c87f0="" class="oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text">Test Toast</p>
      <p data-v-0334bd57="" data-v-d95c87f0="" class="oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text"></p>
    </div>
  </div>
  <div data-v-d86c7eba="" data-v-d95c87f0="" class="oxd-toast-close-container">
    <div data-v-d86c7eba="" class="oxd-toast-close oxd-toast-close--default" role="button">×</div>
  </div>
</div>"
`;

exports[`Toast > Toast.vue > should renders OXD Toast error 1`] = `
"<div data-v-d95c87f0="" class="oxd-toast oxd-toast--error" aria-live="assertive">
  <div data-v-d95c87f0="" class="oxd-toast-start">
    <div data-v-e0c4fc83="" data-v-d95c87f0="" class="oxd-toast-icon-container">
      <div data-v-e0c4fc83="" class="oxd-toast-icon-wrap oxd-toast-icon-wrap--error"><i data-v-85cde8ca="" data-v-e0c4fc83="" class="oxd-icon bi-exclamation-circle oxd-toast-icon"></i></div>
    </div>
    <div data-v-d95c87f0="" class="oxd-toast-content oxd-toast-content--error">
      <p data-v-0334bd57="" data-v-d95c87f0="" class="oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text">Test Toast</p>
      <p data-v-0334bd57="" data-v-d95c87f0="" class="oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text"></p>
    </div>
  </div>
  <div data-v-d86c7eba="" data-v-d95c87f0="" class="oxd-toast-close-container">
    <div data-v-d86c7eba="" class="oxd-toast-close oxd-toast-close--error" role="button">×</div>
  </div>
</div>"
`;

exports[`Toast > Toast.vue > should renders OXD Toast info 1`] = `
"<div data-v-d95c87f0="" class="oxd-toast oxd-toast--info" aria-live="assertive">
  <div data-v-d95c87f0="" class="oxd-toast-start">
    <div data-v-e0c4fc83="" data-v-d95c87f0="" class="oxd-toast-icon-container">
      <div data-v-e0c4fc83="" class="oxd-toast-icon-wrap oxd-toast-icon-wrap--info"><i data-v-85cde8ca="" data-v-e0c4fc83="" class="oxd-icon bi-info-circle oxd-toast-icon"></i></div>
    </div>
    <div data-v-d95c87f0="" class="oxd-toast-content oxd-toast-content--info">
      <p data-v-0334bd57="" data-v-d95c87f0="" class="oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text">Test Toast</p>
      <p data-v-0334bd57="" data-v-d95c87f0="" class="oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text"></p>
    </div>
  </div>
  <div data-v-d86c7eba="" data-v-d95c87f0="" class="oxd-toast-close-container">
    <div data-v-d86c7eba="" class="oxd-toast-close oxd-toast-close--info" role="button">×</div>
  </div>
</div>"
`;

exports[`Toast > Toast.vue > should renders OXD Toast success 1`] = `
"<div data-v-d95c87f0="" class="oxd-toast oxd-toast--success" aria-live="assertive">
  <div data-v-d95c87f0="" class="oxd-toast-start">
    <div data-v-e0c4fc83="" data-v-d95c87f0="" class="oxd-toast-icon-container">
      <div data-v-e0c4fc83="" class="oxd-toast-icon-wrap oxd-toast-icon-wrap--success"><i data-v-85cde8ca="" data-v-e0c4fc83="" class="oxd-icon bi-check2 oxd-toast-icon"></i></div>
    </div>
    <div data-v-d95c87f0="" class="oxd-toast-content oxd-toast-content--success">
      <p data-v-0334bd57="" data-v-d95c87f0="" class="oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text">Test Toast</p>
      <p data-v-0334bd57="" data-v-d95c87f0="" class="oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text"></p>
    </div>
  </div>
  <div data-v-d86c7eba="" data-v-d95c87f0="" class="oxd-toast-close-container">
    <div data-v-d86c7eba="" class="oxd-toast-close oxd-toast-close--success" role="button">×</div>
  </div>
</div>"
`;

exports[`Toast > Toast.vue > should renders OXD Toast warn 1`] = `
"<div data-v-d95c87f0="" class="oxd-toast oxd-toast--warn" aria-live="assertive">
  <div data-v-d95c87f0="" class="oxd-toast-start">
    <div data-v-e0c4fc83="" data-v-d95c87f0="" class="oxd-toast-icon-container">
      <div data-v-e0c4fc83="" class="oxd-toast-icon-wrap oxd-toast-icon-wrap--warn"><i data-v-85cde8ca="" data-v-e0c4fc83="" class="oxd-icon bi-exclamation-triangle oxd-toast-icon"></i></div>
    </div>
    <div data-v-d95c87f0="" class="oxd-toast-content oxd-toast-content--warn">
      <p data-v-0334bd57="" data-v-d95c87f0="" class="oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text">Test Toast</p>
      <p data-v-0334bd57="" data-v-d95c87f0="" class="oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text"></p>
    </div>
  </div>
  <div data-v-d86c7eba="" data-v-d95c87f0="" class="oxd-toast-close-container">
    <div data-v-d86c7eba="" class="oxd-toast-close oxd-toast-close--warn" role="button">×</div>
  </div>
</div>"
`;
